ibex-lib/__build__/src/parser/parser.output
Terminals unused in grammar

    TK_STRING
    TK_BOOL
    TK_PARAM
    TK_ASSIGN
    TK_BEGIN
    TK_FROM
    TK_TO
    TK_UNION
    TK_INTERSEC


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 decl_opt_cst system_or_func

    3 $@2: %empty

    4 program: $@2 TK_CHOCO choco_ctr

    5 system_or_func: function decl_opt_fncs TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    6               | TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    7               | function

    8 choco_ctr: ctr_blk_list

    9 decl_opt_cst: %empty
   10             | TK_CONST
   11             | TK_CONST decl_cst_list ';'

   12 decl_cst_list: decl_cst
   13              | decl_cst_list ';' decl_cst

   14 decl_cst: TK_NEW_SYMBOL dimension TK_EQU expr
   15         | TK_NEW_SYMBOL dimension TK_IN expr

   16 decl_var_list: decl_var
   17              | decl_var_list ';' decl_var
   18              | decl_var_list ',' decl_var

   19 decl_var: TK_NEW_SYMBOL dimension
   20         | TK_NEW_SYMBOL dimension TK_IN expr

   21 dimension: %empty
   22          | '[' expr ']'
   23          | '[' expr ']' '[' expr ']'

   24 interval: '[' expr ',' expr ']'

   25 decl_opt_fncs: decl_opt_fncs function
   26              | %empty

   27 $@3: %empty

   28 function: TK_FUNCTION $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

   29 semicolon_opt: ';'
   30              | %empty

   31 fnc_inpt_list: fnc_inpt_list ',' fnc_input
   32              | fnc_input

   33 fnc_input: TK_NEW_SYMBOL dimension

   34 fnc_code: fnc_code fnc_assign ';'
   35         | %empty

   36 fnc_assign: TK_NEW_SYMBOL TK_EQU expr
   37           | TK_CONSTANT TK_EQU expr

   38 decl_opt_goal: %empty
   39              | TK_MINIMIZE expr semicolon_opt

   40 decl_opt_ctrs: %empty
   41              | TK_CTRS ctr_blk_list TK_END

   42 ctr_blk_list: ctr_blk_list_ semicolon_opt

   43 ctr_blk_list_: ctr_blk_list_ ';' ctr_blk
   44              | ctr_blk

   45 ctr_blk: ctr_loop
   46        | ctr_assigns ';' ctr
   47        | ctr

   48 ctr_assigns: ctr_assigns ';' ctr_assign
   49            | ctr_assign

   50 ctr_assign: TK_NEW_SYMBOL TK_EQU expr

   51 $@4: %empty

   52 ctr_loop: TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@4 ctr_blk_list_ semicolon_opt TK_END

   53 ctr: expr TK_EQU expr
   54    | expr TK_LEQ expr
   55    | expr TK_GEQ expr
   56    | expr '<' expr
   57    | expr '>' expr
   58    | expr TK_IN expr
   59    | '(' ctr ')'

   60 expr: expr '+' expr
   61     | expr '*' expr
   62     | expr '-' expr
   63     | expr '/' expr
   64     | TK_MAX '(' expr_row ')'
   65     | TK_MIN '(' expr_row ')'
   66     | TK_ATAN2 '(' expr ',' expr ')'
   67     | '-' expr
   68     | TK_ABS '(' expr ')'
   69     | TK_SIGN '(' expr ')'
   70     | expr '\''
   71     | TK_SQRT '(' expr ')'
   72     | TK_EXPO '(' expr ')'
   73     | TK_LOG '(' expr ')'
   74     | TK_COS '(' expr ')'
   75     | TK_SIN '(' expr ')'
   76     | TK_TAN '(' expr ')'
   77     | TK_ACOS '(' expr ')'
   78     | TK_ASIN '(' expr ')'
   79     | TK_ATAN '(' expr ')'
   80     | TK_COSH '(' expr ')'
   81     | TK_SINH '(' expr ')'
   82     | TK_TANH '(' expr ')'
   83     | TK_ACOSH '(' expr ')'
   84     | TK_ASINH '(' expr ')'
   85     | TK_ATANH '(' expr ')'
   86     | TK_CHI '(' expr ',' expr ',' expr ')'
   87     | '+' expr
   88     | '(' expr ')'
   89     | '<' expr ',' expr '>'
   90     | expr '^' expr
   91     | expr '[' expr_index ']'
   92     | expr '(' expr_index ')'
   93     | expr '(' expr_index ',' expr_index ')'
   94     | '(' expr_row ')'
   95     | '(' expr_col ')'
   96     | TK_ENTITY
   97     | '{' TK_INTEGER '}'
   98     | TK_ITERATOR
   99     | TK_EXPR_TMP_SYMBOL
  100     | TK_CONSTANT
  101     | TK_FUNC_SYMBOL '(' expr ')'
  102     | TK_FUNC_SYMBOL '(' expr_row ')'
  103     | TK_FLOAT
  104     | TK_PI
  105     | TK_INFINITY
  106     | TK_INTEGER
  107     | interval
  108     | TK_INF '(' expr ')'
  109     | TK_MID '(' expr ')'
  110     | TK_SUP '(' expr ')'
  111     | TK_DIFF '(' expr_row ')'
  112     | TK_UNARY_OP '(' expr ')'
  113     | TK_BINARY_OP '(' expr ',' expr ')'

  114 expr_row: expr_row ',' expr
  115         | expr ',' expr

  116 expr_col: expr_col ';' expr
  117         | expr ';' expr

  118 expr_index: ':'
  119           | expr
  120           | expr ':' expr


Terminals, with rules where they appear

    $end (0) 0
    '\'' (39) 70
    '(' (40) 28 59 64 65 66 68 69 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 88 92 93 94 95 101 102 108 109 110 111 112 113
    ')' (41) 28 59 64 65 66 68 69 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 88 92 93 94 95 101 102 108 109 110 111 112 113
    '*' (42) 61
    '+' (43) 60 87
    ',' (44) 18 24 31 66 86 89 93 113 114 115
    '-' (45) 62 67
    '/' (47) 63
    ':' (58) 52 118 120
    ';' (59) 5 6 11 13 17 29 34 43 46 48 52 116 117
    '<' (60) 56 89
    '>' (62) 57 89
    '[' (91) 22 23 24 91
    ']' (93) 22 23 24 91
    '^' (94) 90
    '{' (123) 97
    '}' (125) 97
    error (256)
    TK_CHOCO (258) 4
    TK_CONSTANT <str> (259) 37 100
    TK_NEW_SYMBOL <str> (260) 14 15 19 20 28 33 36 50 52
    TK_FUNC_SYMBOL <str> (261) 101 102
    TK_EXPR_TMP_SYMBOL <str> (262) 99
    TK_ENTITY <str> (263) 96
    TK_ITERATOR <str> (264) 98
    TK_UNARY_OP <str> (265) 112
    TK_BINARY_OP <str> (266) 113
    TK_STRING <str> (267)
    TK_INTEGER <itg> (268) 97 106
    TK_FLOAT <real> (269) 103
    TK_PI (270) 104
    TK_INFINITY (271) 105
    TK_BOOL <_bool> (272)
    TK_PARAM (273)
    TK_CONST (274) 10 11
    TK_VARS (275) 5 6
    TK_FUNCTION (276) 28
    TK_DIFF (277) 111
    TK_MIN (278) 65
    TK_MAX (279) 64
    TK_INF (280) 108
    TK_MID (281) 109
    TK_SUP (282) 110
    TK_SIGN (283) 69
    TK_ABS (284) 68
    TK_SQRT (285) 71
    TK_EXPO (286) 72
    TK_LOG (287) 73
    TK_COS (288) 74
    TK_SIN (289) 75
    TK_TAN (290) 76
    TK_ACOS (291) 77
    TK_ASIN (292) 78
    TK_ATAN (293) 79
    TK_ATAN2 (294) 66
    TK_COSH (295) 80
    TK_SINH (296) 81
    TK_TANH (297) 82
    TK_ACOSH (298) 83
    TK_ASINH (299) 84
    TK_ATANH (300) 85
    TK_LEQ (301) 54
    TK_GEQ (302) 55
    TK_EQU (303) 14 36 37 50 52 53
    TK_ASSIGN (304)
    TK_CHI (305) 86
    TK_BEGIN (306)
    TK_END (307) 28 41 52
    TK_FOR (308) 52
    TK_FROM (309)
    TK_TO (310)
    TK_RETURN (311) 28
    TK_CTRS (312) 41
    TK_MINIMIZE (313) 39
    TK_IN (314) 15 20 58
    TK_UNION (315)
    TK_INTERSEC (316)


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    program (80)
        on left: 2 4
        on right: 0
    $@1 (81)
        on left: 1
        on right: 2
    $@2 (82)
        on left: 3
        on right: 4
    system_or_func (83)
        on left: 5 6 7
        on right: 2
    choco_ctr (84)
        on left: 8
        on right: 4
    decl_opt_cst (85)
        on left: 9 10 11
        on right: 2
    decl_cst_list (86)
        on left: 12 13
        on right: 11 13
    decl_cst (87)
        on left: 14 15
        on right: 12 13
    decl_var_list (88)
        on left: 16 17 18
        on right: 5 6 17 18
    decl_var (89)
        on left: 19 20
        on right: 16 17 18
    dimension <dim> (90)
        on left: 21 22 23
        on right: 14 15 19 20 33
    interval <itv> (91)
        on left: 24
        on right: 107
    decl_opt_fncs (92)
        on left: 25 26
        on right: 5 6 25
    function (93)
        on left: 28
        on right: 5 7 25
    $@3 (94)
        on left: 27
        on right: 28
    semicolon_opt (95)
        on left: 29 30
        on right: 28 39 42 52
    fnc_inpt_list (96)
        on left: 31 32
        on right: 28 31
    fnc_input (97)
        on left: 33
        on right: 31 32
    fnc_code (98)
        on left: 34 35
        on right: 28 34
    fnc_assign (99)
        on left: 36 37
        on right: 34
    decl_opt_goal (100)
        on left: 38 39
        on right: 5 6
    decl_opt_ctrs (101)
        on left: 40 41
        on right: 5 6
    ctr_blk_list (102)
        on left: 42
        on right: 8 41
    ctr_blk_list_ <constraints> (103)
        on left: 43 44
        on right: 42 43 52
    ctr_blk <constraint> (104)
        on left: 45 46 47
        on right: 43 44
    ctr_assigns (105)
        on left: 48 49
        on right: 46 48
    ctr_assign (106)
        on left: 50
        on right: 48 49
    ctr_loop <constraint> (107)
        on left: 52
        on right: 45
    $@4 (108)
        on left: 51
        on right: 52
    ctr <constraint> (109)
        on left: 53 54 55 56 57 58 59
        on right: 46 47 59
    expr <expression> (110)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 14 15 20 22 23 24 28 36 37 39 50 52 53 54 55 56 57 58 60 61 62 63 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 101 108 109 110 112 113 114 115 116 117 119 120
    expr_row <expressions> (111)
        on left: 114 115
        on right: 64 65 94 102 111 114
    expr_col <expressions> (112)
        on left: 116 117
        on right: 95 116
    expr_index <expression> (113)
        on left: 118 119 120
        on right: 91 92 93


State 0

    0 $accept: . program $end
    1 $@1: . %empty  [TK_CONST, TK_VARS, TK_FUNCTION]
    2 program: . $@1 decl_opt_cst system_or_func
    3 $@2: . %empty  [TK_CHOCO]
    4 program: . $@2 TK_CHOCO choco_ctr

    TK_CHOCO  reduce using rule 3 ($@2)
    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2
    $@2      go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    2 program: $@1 . decl_opt_cst system_or_func
    9 decl_opt_cst: . %empty  [TK_VARS, TK_FUNCTION]
   10             | . TK_CONST
   11             | . TK_CONST decl_cst_list ';'

    TK_CONST  shift, and go to state 5

    $default  reduce using rule 9 (decl_opt_cst)

    decl_opt_cst  go to state 6


State 3

    4 program: $@2 . TK_CHOCO choco_ctr

    TK_CHOCO  shift, and go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

   10 decl_opt_cst: TK_CONST .  [TK_VARS, TK_FUNCTION]
   11             | TK_CONST . decl_cst_list ';'
   12 decl_cst_list: . decl_cst
   13              | . decl_cst_list ';' decl_cst
   14 decl_cst: . TK_NEW_SYMBOL dimension TK_EQU expr
   15         | . TK_NEW_SYMBOL dimension TK_IN expr

    TK_NEW_SYMBOL  shift, and go to state 8

    $default  reduce using rule 10 (decl_opt_cst)

    decl_cst_list  go to state 9
    decl_cst       go to state 10


State 6

    2 program: $@1 decl_opt_cst . system_or_func
    5 system_or_func: . function decl_opt_fncs TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    6               | . TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    7               | . function
   28 function: . TK_FUNCTION $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

    TK_VARS      shift, and go to state 11
    TK_FUNCTION  shift, and go to state 12

    system_or_func  go to state 13
    function        go to state 14


State 7

    4 program: $@2 TK_CHOCO . choco_ctr
    8 choco_ctr: . ctr_blk_list
   24 interval: . '[' expr ',' expr ']'
   42 ctr_blk_list: . ctr_blk_list_ semicolon_opt
   43 ctr_blk_list_: . ctr_blk_list_ ';' ctr_blk
   44              | . ctr_blk
   45 ctr_blk: . ctr_loop
   46        | . ctr_assigns ';' ctr
   47        | . ctr
   48 ctr_assigns: . ctr_assigns ';' ctr_assign
   49            | . ctr_assign
   50 ctr_assign: . TK_NEW_SYMBOL TK_EQU expr
   52 ctr_loop: . TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@4 ctr_blk_list_ semicolon_opt TK_END
   53 ctr: . expr TK_EQU expr
   54    | . expr TK_LEQ expr
   55    | . expr TK_GEQ expr
   56    | . expr '<' expr
   57    | . expr '>' expr
   58    | . expr TK_IN expr
   59    | . '(' ctr ')'
   60 expr: . expr '+' expr
   61     | . expr '*' expr
   62     | . expr '-' expr
   63     | . expr '/' expr
   64     | . TK_MAX '(' expr_row ')'
   65     | . TK_MIN '(' expr_row ')'
   66     | . TK_ATAN2 '(' expr ',' expr ')'
   67     | . '-' expr
   68     | . TK_ABS '(' expr ')'
   69     | . TK_SIGN '(' expr ')'
   70     | . expr '\''
   71     | . TK_SQRT '(' expr ')'
   72     | . TK_EXPO '(' expr ')'
   73     | . TK_LOG '(' expr ')'
   74     | . TK_COS '(' expr ')'
   75     | . TK_SIN '(' expr ')'
   76     | . TK_TAN '(' expr ')'
   77     | . TK_ACOS '(' expr ')'
   78     | . TK_ASIN '(' expr ')'
   79     | . TK_ATAN '(' expr ')'
   80     | . TK_COSH '(' expr ')'
   81     | . TK_SINH '(' expr ')'
   82     | . TK_TANH '(' expr ')'
   83     | . TK_ACOSH '(' expr ')'
   84     | . TK_ASINH '(' expr ')'
   85     | . TK_ATANH '(' expr ')'
   86     | . TK_CHI '(' expr ',' expr ',' expr ')'
   87     | . '+' expr
   88     | . '(' expr ')'
   89     | . '<' expr ',' expr '>'
   90     | . expr '^' expr
   91     | . expr '[' expr_index ']'
   92     | . expr '(' expr_index ')'
   93     | . expr '(' expr_index ',' expr_index ')'
   94     | . '(' expr_row ')'
   95     | . '(' expr_col ')'
   96     | . TK_ENTITY
   97     | . '{' TK_INTEGER '}'
   98     | . TK_ITERATOR
   99     | . TK_EXPR_TMP_SYMBOL
  100     | . TK_CONSTANT
  101     | . TK_FUNC_SYMBOL '(' expr ')'
  102     | . TK_FUNC_SYMBOL '(' expr_row ')'
  103     | . TK_FLOAT
  104     | . TK_PI
  105     | . TK_INFINITY
  106     | . TK_INTEGER
  107     | . interval
  108     | . TK_INF '(' expr ')'
  109     | . TK_MID '(' expr ')'
  110     | . TK_SUP '(' expr ')'
  111     | . TK_DIFF '(' expr_row ')'
  112     | . TK_UNARY_OP '(' expr ')'
  113     | . TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 15
    TK_NEW_SYMBOL       shift, and go to state 16
    TK_FUNC_SYMBOL      shift, and go to state 17
    TK_EXPR_TMP_SYMBOL  shift, and go to state 18
    TK_ENTITY           shift, and go to state 19
    TK_ITERATOR         shift, and go to state 20
    TK_UNARY_OP         shift, and go to state 21
    TK_BINARY_OP        shift, and go to state 22
    TK_INTEGER          shift, and go to state 23
    TK_FLOAT            shift, and go to state 24
    TK_PI               shift, and go to state 25
    TK_INFINITY         shift, and go to state 26
    TK_DIFF             shift, and go to state 27
    TK_MIN              shift, and go to state 28
    TK_MAX              shift, and go to state 29
    TK_INF              shift, and go to state 30
    TK_MID              shift, and go to state 31
    TK_SUP              shift, and go to state 32
    TK_SIGN             shift, and go to state 33
    TK_ABS              shift, and go to state 34
    TK_SQRT             shift, and go to state 35
    TK_EXPO             shift, and go to state 36
    TK_LOG              shift, and go to state 37
    TK_COS              shift, and go to state 38
    TK_SIN              shift, and go to state 39
    TK_TAN              shift, and go to state 40
    TK_ACOS             shift, and go to state 41
    TK_ASIN             shift, and go to state 42
    TK_ATAN             shift, and go to state 43
    TK_ATAN2            shift, and go to state 44
    TK_COSH             shift, and go to state 45
    TK_SINH             shift, and go to state 46
    TK_TANH             shift, and go to state 47
    TK_ACOSH            shift, and go to state 48
    TK_ASINH            shift, and go to state 49
    TK_ATANH            shift, and go to state 50
    TK_CHI              shift, and go to state 51
    TK_FOR              shift, and go to state 52
    '<'                 shift, and go to state 53
    '+'                 shift, and go to state 54
    '-'                 shift, and go to state 55
    '['                 shift, and go to state 56
    '('                 shift, and go to state 57
    '{'                 shift, and go to state 58

    choco_ctr      go to state 59
    interval       go to state 60
    ctr_blk_list   go to state 61
    ctr_blk_list_  go to state 62
    ctr_blk        go to state 63
    ctr_assigns    go to state 64
    ctr_assign     go to state 65
    ctr_loop       go to state 66
    ctr            go to state 67
    expr           go to state 68


State 8

   14 decl_cst: TK_NEW_SYMBOL . dimension TK_EQU expr
   15         | TK_NEW_SYMBOL . dimension TK_IN expr
   21 dimension: . %empty  [TK_EQU, TK_IN]
   22          | . '[' expr ']'
   23          | . '[' expr ']' '[' expr ']'

    '['  shift, and go to state 69

    $default  reduce using rule 21 (dimension)

    dimension  go to state 70


State 9

   11 decl_opt_cst: TK_CONST decl_cst_list . ';'
   13 decl_cst_list: decl_cst_list . ';' decl_cst

    ';'  shift, and go to state 71


State 10

   12 decl_cst_list: decl_cst .

    $default  reduce using rule 12 (decl_cst_list)


State 11

    6 system_or_func: TK_VARS . decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
   16 decl_var_list: . decl_var
   17              | . decl_var_list ';' decl_var
   18              | . decl_var_list ',' decl_var
   19 decl_var: . TK_NEW_SYMBOL dimension
   20         | . TK_NEW_SYMBOL dimension TK_IN expr

    TK_NEW_SYMBOL  shift, and go to state 72

    decl_var_list  go to state 73
    decl_var       go to state 74


State 12

   27 $@3: . %empty
   28 function: TK_FUNCTION . $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

    $default  reduce using rule 27 ($@3)

    $@3  go to state 75


State 13

    2 program: $@1 decl_opt_cst system_or_func .

    $default  reduce using rule 2 (program)


State 14

    5 system_or_func: function . decl_opt_fncs TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    7               | function .  [$end]
   25 decl_opt_fncs: . decl_opt_fncs function
   26              | . %empty  [TK_VARS, TK_FUNCTION]

    $end      reduce using rule 7 (system_or_func)
    $default  reduce using rule 26 (decl_opt_fncs)

    decl_opt_fncs  go to state 76


State 15

  100 expr: TK_CONSTANT .

    $default  reduce using rule 100 (expr)


State 16

   50 ctr_assign: TK_NEW_SYMBOL . TK_EQU expr

    TK_EQU  shift, and go to state 77


State 17

  101 expr: TK_FUNC_SYMBOL . '(' expr ')'
  102     | TK_FUNC_SYMBOL . '(' expr_row ')'

    '('  shift, and go to state 78


State 18

   99 expr: TK_EXPR_TMP_SYMBOL .

    $default  reduce using rule 99 (expr)


State 19

   96 expr: TK_ENTITY .

    $default  reduce using rule 96 (expr)


State 20

   98 expr: TK_ITERATOR .

    $default  reduce using rule 98 (expr)


State 21

  112 expr: TK_UNARY_OP . '(' expr ')'

    '('  shift, and go to state 79


State 22

  113 expr: TK_BINARY_OP . '(' expr ',' expr ')'

    '('  shift, and go to state 80


State 23

  106 expr: TK_INTEGER .

    $default  reduce using rule 106 (expr)


State 24

  103 expr: TK_FLOAT .

    $default  reduce using rule 103 (expr)


State 25

  104 expr: TK_PI .

    $default  reduce using rule 104 (expr)


State 26

  105 expr: TK_INFINITY .

    $default  reduce using rule 105 (expr)


State 27

  111 expr: TK_DIFF . '(' expr_row ')'

    '('  shift, and go to state 81


State 28

   65 expr: TK_MIN . '(' expr_row ')'

    '('  shift, and go to state 82


State 29

   64 expr: TK_MAX . '(' expr_row ')'

    '('  shift, and go to state 83


State 30

  108 expr: TK_INF . '(' expr ')'

    '('  shift, and go to state 84


State 31

  109 expr: TK_MID . '(' expr ')'

    '('  shift, and go to state 85


State 32

  110 expr: TK_SUP . '(' expr ')'

    '('  shift, and go to state 86


State 33

   69 expr: TK_SIGN . '(' expr ')'

    '('  shift, and go to state 87


State 34

   68 expr: TK_ABS . '(' expr ')'

    '('  shift, and go to state 88


State 35

   71 expr: TK_SQRT . '(' expr ')'

    '('  shift, and go to state 89


State 36

   72 expr: TK_EXPO . '(' expr ')'

    '('  shift, and go to state 90


State 37

   73 expr: TK_LOG . '(' expr ')'

    '('  shift, and go to state 91


State 38

   74 expr: TK_COS . '(' expr ')'

    '('  shift, and go to state 92


State 39

   75 expr: TK_SIN . '(' expr ')'

    '('  shift, and go to state 93


State 40

   76 expr: TK_TAN . '(' expr ')'

    '('  shift, and go to state 94


State 41

   77 expr: TK_ACOS . '(' expr ')'

    '('  shift, and go to state 95


State 42

   78 expr: TK_ASIN . '(' expr ')'

    '('  shift, and go to state 96


State 43

   79 expr: TK_ATAN . '(' expr ')'

    '('  shift, and go to state 97


State 44

   66 expr: TK_ATAN2 . '(' expr ',' expr ')'

    '('  shift, and go to state 98


State 45

   80 expr: TK_COSH . '(' expr ')'

    '('  shift, and go to state 99


State 46

   81 expr: TK_SINH . '(' expr ')'

    '('  shift, and go to state 100


State 47

   82 expr: TK_TANH . '(' expr ')'

    '('  shift, and go to state 101


State 48

   83 expr: TK_ACOSH . '(' expr ')'

    '('  shift, and go to state 102


State 49

   84 expr: TK_ASINH . '(' expr ')'

    '('  shift, and go to state 103


State 50

   85 expr: TK_ATANH . '(' expr ')'

    '('  shift, and go to state 104


State 51

   86 expr: TK_CHI . '(' expr ',' expr ',' expr ')'

    '('  shift, and go to state 105


State 52

   52 ctr_loop: TK_FOR . TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@4 ctr_blk_list_ semicolon_opt TK_END

    TK_NEW_SYMBOL  shift, and go to state 106


State 53

   24 interval: . '[' expr ',' expr ']'
   60 expr: . expr '+' expr
   61     | . expr '*' expr
   62     | . expr '-' expr
   63     | . expr '/' expr
   64     | . TK_MAX '(' expr_row ')'
   65     | . TK_MIN '(' expr_row ')'
   66     | . TK_ATAN2 '(' expr ',' expr ')'
   67     | . '-' expr
   68     | . TK_ABS '(' expr ')'
   69     | . TK_SIGN '(' expr ')'
   70     | . expr '\''
   71     | . TK_SQRT '(' expr ')'
   72     | . TK_EXPO '(' expr ')'
   73     | . TK_LOG '(' expr ')'
   74     | . TK_COS '(' expr ')'
   75     | . TK_SIN '(' expr ')'
   76     | . TK_TAN '(' expr ')'
   77     | . TK_ACOS '(' expr ')'
   78     | . TK_ASIN '(' expr ')'
   79     | . TK_ATAN '(' expr ')'
   80     | . TK_COSH '(' expr ')'
   81     | . TK_SINH '(' expr ')'
   82     | . TK_TANH '(' expr ')'
   83     | . TK_ACOSH '(' expr ')'
   84     | . TK_ASINH '(' expr ')'
   85     | . TK_ATANH '(' expr ')'
   86     | . TK_CHI '(' expr ',' expr ',' expr ')'
   87     | . '+' expr
   88     | . '(' expr ')'
   89     | . '<' expr ',' expr '>'
   89     | '<' . expr ',' expr '>'
   90     | . expr '^' expr
   91     | . expr '[' expr_index ']'
   92     | . expr '(' expr_index ')'
   93     | . expr '(' expr_index ',' expr_index ')'
   94     | . '(' expr_row ')'
   95     | . '(' expr_col ')'
   96     | . TK_ENTITY
   97     | . '{' TK_INTEGER '}'
   98     | . TK_ITERATOR
   99     | . TK_EXPR_TMP_SYMBOL
  100     | . TK_CONSTANT
  101     | . TK_FUNC_SYMBOL '(' expr ')'
  102     | . TK_FUNC_SYMBOL '(' expr_row ')'
  103     | . TK_FLOAT
  104     | . TK_PI
  105     | . TK_INFINITY
  106     | . TK_INTEGER
  107     | . interval
  108     | . TK_INF '(' expr ')'
  109     | . TK_MID '(' expr ')'
  110     | . TK_SUP '(' expr ')'
  111     | . TK_DIFF '(' expr_row ')'
  112     | . TK_UNARY_OP '(' expr ')'
  113     | . TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 15
    TK_FUNC_SYMBOL      shift, and go to state 17
    TK_EXPR_TMP_SYMBOL  shift, and go to state 18
    TK_ENTITY           shift, and go to state 19
    TK_ITERATOR         shift, and go to state 20
    TK_UNARY_OP         shift, and go to state 21
    TK_BINARY_OP        shift, and go to state 22
    TK_INTEGER          shift, and go to state 23
    TK_FLOAT            shift, and go to state 24
    TK_PI               shift, and go to state 25
    TK_INFINITY         shift, and go to state 26
    TK_DIFF             shift, and go to state 27
    TK_MIN              shift, and go to state 28
    TK_MAX              shift, and go to state 29
    TK_INF              shift, and go to state 30
    TK_MID              shift, and go to state 31
    TK_SUP              shift, and go to state 32
    TK_SIGN             shift, and go to state 33
    TK_ABS              shift, and go to state 34
    TK_SQRT             shift, and go to state 35
    TK_EXPO             shift, and go to state 36
    TK_LOG              shift, and go to state 37
    TK_COS              shift, and go to state 38
    TK_SIN              shift, and go to state 39
    TK_TAN              shift, and go to state 40
    TK_ACOS             shift, and go to state 41
    TK_ASIN             shift, and go to state 42
    TK_ATAN             shift, and go to state 43
    TK_ATAN2            shift, and go to state 44
    TK_COSH             shift, and go to state 45
    TK_SINH             shift, and go to state 46
    TK_TANH             shift, and go to state 47
    TK_ACOSH            shift, and go to state 48
    TK_ASINH            shift, and go to state 49
    TK_ATANH            shift, and go to state 50
    TK_CHI              shift, and go to state 51
    '<'                 shift, and go to state 53
    '+'                 shift, and go to state 54
    '-'                 shift, and go to state 55
    '['                 shift, and go to state 56
    '('                 shift, and go to state 107
    '{'                 shift, and go to state 58

    interval  go to state 60
    expr      go to state 108


State 54

   24 interval: . '[' expr ',' expr ']'
   60 expr: . expr '+' expr
   61     | . expr '*' expr
   62     | . expr '-' expr
   63     | . expr '/' expr
   64     | . TK_MAX '(' expr_row ')'
   65     | . TK_MIN '(' expr_row ')'
   66     | . TK_ATAN2 '(' expr ',' expr ')'
   67     | . '-' expr
   68     | . TK_ABS '(' expr ')'
   69     | . TK_SIGN '(' expr ')'
   70     | . expr '\''
   71     | . TK_SQRT '(' expr ')'
   72     | . TK_EXPO '(' expr ')'
   73     | . TK_LOG '(' expr ')'
   74     | . TK_COS '(' expr ')'
   75     | . TK_SIN '(' expr ')'
   76     | . TK_TAN '(' expr ')'
   77     | . TK_ACOS '(' expr ')'
   78     | . TK_ASIN '(' expr ')'
   79     | . TK_ATAN '(' expr ')'
   80     | . TK_COSH '(' expr ')'
   81     | . TK_SINH '(' expr ')'
   82     | . TK_TANH '(' expr ')'
   83     | . TK_ACOSH '(' expr ')'
   84     | . TK_ASINH '(' expr ')'
   85     | . TK_ATANH '(' expr ')'
   86     | . TK_CHI '(' expr ',' expr ',' expr ')'
   87     | . '+' expr
   87     | '+' . expr
   88     | . '(' expr ')'
   89     | . '<' expr ',' expr '>'
   90     | . expr '^' expr
   91     | . expr '[' expr_index ']'
   92     | . expr '(' expr_index ')'
   93     | . expr '(' expr_index ',' expr_index ')'
   94     | . '(' expr_row ')'
   95     | . '(' expr_col ')'
   96     | . TK_ENTITY
   97     | . '{' TK_INTEGER '}'
   98     | . TK_ITERATOR
   99     | . TK_EXPR_TMP_SYMBOL
  100     | . TK_CONSTANT
  101     | . TK_FUNC_SYMBOL '(' expr ')'
  102     | . TK_FUNC_SYMBOL '(' expr_row ')'
  103     | . TK_FLOAT
  104     | . TK_PI
  105     | . TK_INFINITY
  106     | . TK_INTEGER
  107     | . interval
  108     | . TK_INF '(' expr ')'
  109     | . TK_MID '(' expr ')'
  110     | . TK_SUP '(' expr ')'
  111     | . TK_DIFF '(' expr_row ')'
  112     | . TK_UNARY_OP '(' expr ')'
  113     | . TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 15
    TK_FUNC_SYMBOL      shift, and go to state 17
    TK_EXPR_TMP_SYMBOL  shift, and go to state 18
    TK_ENTITY           shift, and go to state 19
    TK_ITERATOR         shift, and go to state 20
    TK_UNARY_OP         shift, and go to state 21
    TK_BINARY_OP        shift, and go to state 22
    TK_INTEGER          shift, and go to state 23
    TK_FLOAT            shift, and go to state 24
    TK_PI               shift, and go to state 25
    TK_INFINITY         shift, and go to state 26
    TK_DIFF             shift, and go to state 27
    TK_MIN              shift, and go to state 28
    TK_MAX              shift, and go to state 29
    TK_INF              shift, and go to state 30
    TK_MID              shift, and go to state 31
    TK_SUP              shift, and go to state 32
    TK_SIGN             shift, and go to state 33
    TK_ABS              shift, and go to state 34
    TK_SQRT             shift, and go to state 35
    TK_EXPO             shift, and go to state 36
    TK_LOG              shift, and go to state 37
    TK_COS              shift, and go to state 38
    TK_SIN              shift, and go to state 39
    TK_TAN              shift, and go to state 40
    TK_ACOS             shift, and go to state 41
    TK_ASIN             shift, and go to state 42
    TK_ATAN             shift, and go to state 43
    TK_ATAN2            shift, and go to state 44
    TK_COSH             shift, and go to state 45
    TK_SINH             shift, and go to state 46
    TK_TANH             shift, and go to state 47
    TK_ACOSH            shift, and go to state 48
    TK_ASINH            shift, and go to state 49
    TK_ATANH            shift, and go to state 50
    TK_CHI              shift, and go to state 51
    '<'                 shift, and go to state 53
    '+'                 shift, and go to state 54
    '-'                 shift, and go to state 55
    '['                 shift, and go to state 56
    '('                 shift, and go to state 107
    '{'                 shift, and go to state 58

    interval  go to state 60
    expr      go to state 109


State 55
